--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <meta name="author" content="Bin Ren">
+  <meta name="author" content="Moyuan Zheng">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="keywords" content="Bin Ren, Computer Vision, Deep Learning, Generative Models">
-  <meta name="description" content="Bin Ren's homepage">
+  <meta name="keywords" content="Moyuan Zheng, Art">
+  <meta name="description" content="Moyuan's homepage">
   
   <style>
     body {background-color: white;}
@@ -38,10 +38,10 @@
               <a href="image/photo_binren.png"><img style="max-width:100%" alt="profile photo" src="image/photo_binren.png" class="hoverZoomLink"></a>
 
               <p style="text-align:center">
-                <a href="mailto:bin.ren@unitn.it">Email</a> &nbsp/&nbsp
-                <a href="https://scholar.google.com/citations?user=Md9maLYAAAAJ&hl=en">Google Scholar</a> &nbsp/&nbsp
-                <a href="https://github.com/Amazingren">Github</a> &nbsp/&nbsp
-                <a href="https://twitter.com/Hello_RenBin">Twitter</a>
+                <a href="mailto:moyuanzheng305@gmail.com">Email</a> &nbsp/&nbsp
+<!--                 <a href="https://scholar.google.com/citations?user=Md9maLYAAAAJ&hl=en">Google Scholar</a> &nbsp/&nbsp -->
+<!--                 <a href="https://github.com/Amazingren">Github</a> &nbsp/&nbsp -->
+<!--                 <a href="https://twitter.com/Hello_RenBin">Twitter</a> -->
               </p>
             </td>
 
@@ -49,7 +49,7 @@
 
             <td style="padding:2.5%;width:63%;vertical-align:middle">
               <p style="text-align:center">
-                <name>Bin Ren (任斌)</name>
+                <name>Moyuan Zheng (郑默缘)</name>
               </p> 
               <p>I am a second-year Ph.D. student in the <a href="https://www.phd-ai.it/en/359-2/#"> Italian National Artificial Intelligence Program</a> co-organized by <a href="https://www.unipi.it/index.php/english">the University of Pisa, Italy</a>, and <a href="https://www.unitn.it/en">the University of Trento, Italy</a>. 
                  I am in the <a href="http://mhug.disi.unitn.it/#">Multimedia and Human Understanding Group (MHUG)</a> advised by <a href="https://scholar.google.com/citations?user=stFCYOAAAAAJ&hl=en">Prof. Dr. Nicu Sebe</a> and <a href="https://scholar.google.com/citations?user=OM3sZEoAAAAJ&hl=en">Prof. Dr. Rita Cucchiara</a>.
