--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <style>
     body {background-color: white;}
   </style>
-  <title>Bin Ren</title>
+  <title>Moyuan Zheng</title>
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
   <link rel="icon" type="image/jpg" href="image/bulb.jpg">
 </head>
@@ -283,7 +283,7 @@
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;background-color:PapayaWhip"><tbody>
           <tr>
 	   <td style="text-align:center">
-	     <p> Web template &#169; <a href="https://github.com/jonbarron/website" target="_blank" rel="external nofollow noopener noreferrer">this</a>. &nbsp All content &#169; Bin Ren<br> 
+	     <p> Web template &#169; <a href="https://github.com/jonbarron/website" target="_blank" rel="external nofollow noopener noreferrer">this</a>. &nbsp All content &#169; Moyuan Zheng<br> 
 	     <span id="busuanzi_container_site_pv">This page has been visited <span id="busuanzi_value_site_pv"></span>&nbsp;times </span> 
 	    <span id="busuanzi_container_site_uv">by <span id="busuanzi_value_site_uv"></span></span>&nbsp;people.</p>
            </td>
