--- a/index.html
+++ b/index.html
@@ -54,33 +54,20 @@
               <p>Mi chiamo Moyuan Zheng, mi sono laureato presso il dipartimento di scultura della Xi'an University of Technology in Cina, 
                 sono venuto in Italia fin da bambino e allo stesso tempo ho integrato le culture dei due Paesi, durante i miei tre anni di scuola elementare e media in Italia, 
                 essendomi trasferito molte volte ed avendo cambiato molte scuole a causa della mia famiglia, ho visto la diversità sociale ed alimentare delle regioni italiane e questo mi ha aiutato a capire questo paese ancora di più. 
-                Grazie a questa esperienza unica, sono solito aggiungere alcuni elementi italiani nel mio lavoro e nel mio pensiero e, rispetto ai miei coetanei cresciuti in Cina, mi piace sempre esprimere i miei pensieri e le mie azioni in modo diretto
+                Grazie a questa esperienza unica, sono solito aggiungere alcuni elementi italiani nel mio lavoro e nel mio pensiero e, rispetto ai miei coetanei cresciuti in Cina, mi piace sempre esprimere i miei pensieri e le mie azioni in modo diretto.
               </p>
           </tr>
         </tbody></table>
 
 <!-- logos -->
-
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
             <tr>
             <td style="padding:20px;width:20%;vertical-align:middle">
-                <a href="https://ethz.ch/en.html"> <img src="image/eth_logo.png" alt="eth_logo" style="max-width:100%"></a>
-            <td style="padding:20px;width:20%;vertical-align:middle">
-                <a href="https://www.unipi.it/index.php/english"> <img src="image/unipi.png" alt="unipi_logo" style="max-width:100%"></a>
-            <td style="padding:20px;width:20%;vertical-align:middle">
-                <a href="https://www.unitn.it/en"> <img src="image/unitn.png" alt="unitn_logo" style="max-width:100%"></a>
-            </td>
-            <td style="padding:20px;width:20%;vertical-align:middle">
-                <a href="https://english.pku.edu.cn/"> <img src="image/pku.png" alt="pku_logo" style="max-width:100%"></a>
-            </td>
-            <td style="padding:20px;width:20%;vertical-align:middle">
-                <a href="https://en.csu.edu.cn/"> <img src="image/csu.png" alt="csu_logo" style="max-width:100%"></a>
-            </td>
+                <a href="https://www.xiyou.edu.cn/"> <img src="image/xianyoudian.jpg" alt="xianyoudian_logo" style="max-width:100%"></a>
             </tr>
         </tbody></table>
 
 <!-- News -->
-
         <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20"><tbody>
           <tr>
             <td>
