--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
             <tr>
             <td style="padding:20px;width:20%;vertical-align:middle">
-                <a href="https://www.xiyou.edu.cn/"> <img src="image/xianyoudian.jpg" alt="xianyoudian_logo" style="max-width:100%"></a>
+                <a href="https://www.xaut.edu.cn/"> <img src="image/xaut.png" alt="xaut_logo" style="max-width:50%"></a>
             </tr>
         </tbody></table>
 
