--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
               <p style="text-align:center">
                 <name>Moyuan Zheng (郑默缘)</name>
               </p> 
-              <p>Mi chiamo Moyuan Zheng, mi sono laureato presso il dipartimento di scultura della Xi'an University of Technology in Cina, 
+              <p>Mi chiamo Moyuan Zheng, mi sono laureato presso il dipartimento di scultura della <a href="https://www.xaut.edu.cn/" target="_blank">Xi'an University of Technology</a> in Cina, 
                 sono venuto in Italia fin da bambino e allo stesso tempo ho integrato le culture dei due Paesi, durante i miei tre anni di scuola elementare e media in Italia, 
                 essendomi trasferito molte volte ed avendo cambiato molte scuole a causa della mia famiglia, ho visto la diversità sociale ed alimentare delle regioni italiane e questo mi ha aiutato a capire questo paese ancora di più. 
                 Grazie a questa esperienza unica, sono solito aggiungere alcuni elementi italiani nel mio lavoro e nel mio pensiero e, rispetto ai miei coetanei cresciuti in Cina, mi piace sempre esprimere i miei pensieri e le mie azioni in modo diretto.
