--- a/index.html
+++ b/index.html
@@ -60,8 +60,10 @@
         </tbody></table>
 
 <!-- logos -->
-        <table style="width:30%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
             <tr>
+            <td style="padding:20px;width:20%;vertical-align:middle">
+                <a href="https://www.michelangelo-edu.it/"> <img src="image/michelangelo.jpg" alt="michelangelo_logo" style="max-width:100%"></a>
             <td style="padding:20px;width:20%;vertical-align:middle">
                 <a href="https://www.xaut.edu.cn/"> <img src="image/xaut.png" alt="xaut_logo" style="max-width:100%"></a>
             </tr>
