--- a/index.html
+++ b/index.html
@@ -82,8 +82,10 @@
           <tr>
 	<td>
 	<ul>
-    <li>2024/03: I joined INSAIT in Sofia as a research intern.
-    <!-- <li>2022/07: My personal WebPage Comes out! -->
+    <li>12.2023 - 05.2024: Lingua e Cultura Italiana presso l'Istituto Michelangelo di Firenze.
+    <li>11.2023 - 09.2024: Insegnante presso il Centro di Educazione Giovanile di Prato.
+    <li>06.2013 - 09.2017: Assistente artistico presso lo Studio Yecheng di Fuzhou  
+    <li>10.2014 - 09.2016: Artista a contratto presso la Società di Pittura Murale di Xi'an 
 	</ul>
 	</td>
           </tr>
