--- a/index.html
+++ b/index.html
@@ -92,12 +92,11 @@
         </tbody></table>
 
         
-<!-- Selected Publications -->
-
+<!-- Selected Artworks -->
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
             <tr>
             <td style="padding:20px;width:100%;vertical-align:middle">
-              <heading>Publications</heading>
+              <heading>Artworks</heading>
               <p>
             </td>
           </tr>
@@ -106,130 +105,40 @@
 
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
 
-          <tr onmouseout="tomm1_stop()" onmouseover="tomm1_start()">
-            <td style="padding:20px;width:25%;vertical-align:middle">
+          CAMBIAMENTI GRADUALI NEL COMPORTAMENTO (2022)
+          <!-- 2022-A1-->
+          <tr onmouseout="clock_stop()" onmouseover="clock_start()">
+            <td style="padding:10px;width:50%;vertical-align:middle">
               <div class="one">
-                <div class="two" id='tomm1_image'>
-                <img src='image/cit_tomm23.jpg' width="100%" height="75%">
+                <div class="two" id='clock_image'>
+                <img src='image/2022_art1.jpg' width="130%" height="90%">
 	        </div>
-                <img src='image/results_tomm23.jpg' width="100%" height="75%">
+                <img src='image/2022_art2.jpg' width="130%" height="90%">
               </div>
               <script type="text/javascript">
-                function tomm1_start() {
-                  document.getElementById('tomm1_image').style.opacity = "1";
+                function clock_start() {
+                  document.getElementById('clock_image').style.opacity = "1";
                 }
-                function tomm1_stop() {
-                  document.getElementById('tomm1_image').style.opacity = "0";
+                function clock_stop() {
+                  document.getElementById('clock_image').style.opacity = "0";
                 }
-                tomm1_stop()
+                clock_stop()
               </script>
             </td>
-            <td style="padding:20px;width:75%;vertical-align:middle">
-              <a href="https://arxiv.org/pdf/2104.05519.pdf">
-                <papertitle>Cloth Interactive Transformer for Virtual Try-On</papertitle>
-              </a>
+            <td style="padding:10px;width:80%;vertical-align:middle">
+              <papertitle>CAMBIAMENTI GRADUALI NEL COMPOR</papertitle>
               <br>
-              <strong>Bin Ren</strong>, 
-              <a href="https://scholar.google.com/citations?user=9zJkeEMAAAAJ&hl=en&oi=ao">Hao Tang</a>,   
-              <a href="https://scholar.google.com/citations?user=dv9BKcMAAAAJ&hl=en&oi=ao">Fanyang Meng</a>, 
-              <a href="https://scholar.google.com/citations?user=gU9chAwAAAAJ&hl=en&oi=ao">Runwei Ding</a>, 
-              <a href="https://scholar.google.com/citations?user=kPxa2w0AAAAJ&hl=en&oi=ao">Philip Hs Torr</a>, 
-              <a href="https://scholar.google.com/citations?user=stFCYOAAAAAJ&hl=en&oi=ao">Nicu Sebe</a>
+              <strong>Moyuan Zheng</strong>
               <br>
-              <em>Transactions on Multimedia Computing Communications and Applications (ACM ToMM)</em>, 2023
+              Pittura a tecnica mista / 25X25X5 CM. 2022 pp. 12-17
               <br>
-              <a href="https://arxiv.org/pdf/2104.05519.pdf">paper</a> /
-              <a href="https://github.com/Amazingren/CIT">code</a> /
-              <a href="bib/ren_tomm23_cit.txt">bibtex</a> 
+              <em>Florence, Italy</em>, 2022
               <p></p>
               </p>
             </td>
           </tr>	
 
-        <tr onmouseout="cvpr1_stop()" onmouseover="cvpr1_start()">
-            <td style="padding:20px;width:25%;vertical-align:middle">
-              <div class="one">
-                <div class="two" id='cvpr1_image'>
-                <img src='image/projection_cvpr23.jpeg' width="100%" height="75%">
-	        </div>
-                <img src='image/mjp_cvpr23.jpeg' width="100%" height="75%">
-              </div>
-              <script type="text/javascript">
-                function cvpr1_start() {
-                  document.getElementById('cvpr1_image').style.opacity = "1";
-                }
-                function cvpr1_stop() {
-                  document.getElementById('cvpr1_image').style.opacity = "0";
-                }
-                cvpr1_stop()
-              </script>
-            </td>
-            <td style="padding:20px;width:75%;vertical-align:middle">
-              <a href="https://arxiv.org/pdf/2205.12551.pdf">
-                <papertitle>Masked Jigsaw Puzzle: A Versatile Position Embedding for Vision Transformers</papertitle>
-              </a>
-              <br>
-              <strong>Bin Ren</strong>, 
-              <a href="https://scholar.google.com/citations?user=P8qd0rEAAAAJ&hl=en&oi=ao">Yahui Liu</a>, 
-              <a href="https://scholar.google.com/citations?user=Uza2i10AAAAJ&hl=en&oi=ao">Yue Song</a>, 
-              <a href="https://scholar.google.com/citations?user=aSJcgQMAAAAJ&hl=en&oi=ao">Wei Bi</a>, 
-              <a href="https://scholar.google.com/citations?user=OM3sZEoAAAAJ&hl=en&oi=ao">Rita Cucchiara</a>, 
-              <a href="https://scholar.google.com/citations?user=stFCYOAAAAAJ&hl=en&oi=ao">Nicu Sebe</a>, 
-              <a href="https://scholar.google.com/citations?user=k4SdlbcAAAAJ&hl=en&oi=ao">Wei Wang</a>
-              <br>
-              <em>Computer Vision and Pattern Recognition (CVPR)</em>, 2023
-              <br>
-              <a href="https://arxiv.org/pdf/2205.12551.pdf">paper</a> /
-              <a href="https://github.com/yhlleo/MJP">code</a> /
-              <a href="bib/ren_cvpr23_mjp.txt">bibtex</a> 
-              <p></p>
-              </p>
-            </td>
-          </tr>	
-		
-          <tr onmouseout="icassp1_stop()" onmouseover="icassp1_start()">
-            <td style="padding:20px;width:25%;vertical-align:middle">
-              <div class="one">
-                <div class="two" id='icassp1_image'>
-                <img src='image/framework_pitrans_icassp23.jpeg' width="100%" height="75%">
-	        </div>
-                <img src='image/simpleShow_pitrans_icassp23.jpeg' width="100%" height="75%">
-              </div>
-              <script type="text/javascript">
-                function icassp1_start() {
-                  document.getElementById('icassp1_image').style.opacity = "1";
-                }
-                function icassp1_stop() {
-                  document.getElementById('icassp1_image').style.opacity = "0";
-                }
-                icassp1_stop()
-              </script>
-            </td>
-            <td style="padding:20px;width:75%;vertical-align:middle">
-              <a href="https://arxiv.org/pdf/2207.04242.pdf">
-                <papertitle>PI-Trans: Parallel-ConvMLP and Implicit-Transformation Based GAN for Cross-View Image Translation</papertitle>
-              </a>
-              <br>
-              <strong>Bin Ren</strong>, 
-              <a href="https://scholar.google.com/citations?user=9zJkeEMAAAAJ&hl=en&oi=ao">Hao Tang</a>, 
-              <a href="https://scholar.google.com/citations?user=KBZ3zrEAAAAJ&hl=en&oi=ao">Yiming Wang</a>, 
-              <a href="https://scholar.google.com/citations?user=XKGZhEcAAAAJ&hl=en&oi=ao">Xia Li</a>, 
-              <a href="https://scholar.google.com/citations?user=k4SdlbcAAAAJ&hl=en&oi=ao">Wei Wang</a>,
-              <a href="https://scholar.google.com/citations?user=stFCYOAAAAAJ&hl=en&oi=ao">Nicu Sebe</a> 
-
-              <br>
-              <em>International Conference on Acoustics, Speech and Signal Processing (ICASSP)</em>, 2023
-              <br>
-              <a href="https://arxiv.org/pdf/2207.04242.pdf">paper</a> /
-              <a href="https://github.com/Amazingren/PI-Trans">code</a> /
-              <a href="bib/ren_icassp23_pitrans.txt">bibtex</a> 
-              <p></p>
-              </p>
-            </td>
-          </tr>	
-
-        </tbody></table>
-
+          
 <!-- copyright -->
 
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;background-color:PapayaWhip"><tbody>
