--- a/index.html
+++ b/index.html
@@ -111,9 +111,9 @@
             <td style="padding:10px;width:50%;vertical-align:middle">
               <div class="one">
                 <div class="two" id='clock_image'>
-                <img src='image/2022_art1.jpg' width="130%" height="90%">
+                <img src='image/clock1.jpg' width="130%" height="90%">
 	        </div>
-                <img src='image/2022_art2.jpg' width="130%" height="90%">
+                <img src='image/clock2.jpg' width="130%" height="90%">
               </div>
               <script type="text/javascript">
                 function clock_start() {
@@ -138,7 +138,7 @@
             </td>
           </tr>	
 
-          
+
 <!-- copyright -->
 
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;background-color:PapayaWhip"><tbody>
