--- a/index.html
+++ b/index.html
@@ -102,10 +102,42 @@
           </tr>
         </tbody></table>
 
-
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
 
-          CAMBIAMENTI GRADUALI NEL COMPORTAMENTO (2022)
+          <!-- 2024-A1 -->
+          <tr onmouseout="white_stop()" onmouseover="white_start()">
+            <td style="padding:10px;width:50%;vertical-align:middle">
+              <div class="one">
+                <div class="two" id='white_image'>
+                <img src='image/white2.jpg' width="130%" height="90%">
+          </div>
+                <img src='image/white1.jpg' width="130%" height="90%">
+              </div>
+              <script type="text/javascript">
+                function white_start() {
+                  document.getElementById('white_image').style.opacity = "1";
+                }
+                function white_stop() {
+                  document.getElementById('white_image').style.opacity = "0";
+                }
+                white_stop()
+              </script>
+            </td>
+            <td style="padding:10px;width:80%;vertical-align:middle">
+              <papertitle>CONCETTUALIZZAZIONE DELLE EMOZIONI</papertitle>
+              <br>
+              <strong>Moyuan Zheng</strong>
+              <br>
+              Installazione d'arte nello spazio pubblico / 2024 pp. 08-11
+              <br>
+              Performance Artistica e Video: <a href="https://www.youtube.com/watch?v=dmpfmgH7IhI" target="_blank">Youtube</a> (4'27'') 
+              <br>
+              <em>Florence, Italy</em>, 2024
+              <p></p>
+              </p>
+            </td>
+          </tr>	
+
           <!-- 2022-A1-->
           <tr onmouseout="clock_stop()" onmouseover="clock_start()">
             <td style="padding:10px;width:50%;vertical-align:middle">
@@ -140,7 +172,6 @@
 
 
 <!-- copyright -->
-
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;background-color:PapayaWhip"><tbody>
           <tr>
 	   <td style="text-align:center">
