--- a/index.html
+++ b/index.html
@@ -138,6 +138,38 @@
             </td>
           </tr>	
 
+          <!-- 2023-A1-->
+          <tr onmouseout="duomo_stop()" onmouseover="duomo_start()">
+            <td style="padding:10px;width:50%;vertical-align:middle">
+              <div class="one">
+                <div class="two" id='duomo_image'>
+                <img src='image/duomo1.jpg' width="130%" height="90%">
+	        </div>
+                <img src='image/duomo2.jpg' width="130%" height="90%">
+              </div>
+              <script type="text/javascript">
+                function duomo_start() {
+                  document.getElementById('duomo_image').style.opacity = "0";
+                }
+                function duomo_stop() {
+                  document.getElementById('duomo_image').style.opacity = "1";
+                }
+                duomo_stop()
+              </script>
+            </td>
+            <td style="padding:10px;width:80%;vertical-align:middle">
+              <papertitle>IL DIVARIO TRA IL VIRTUALE E LA REALTÀ</papertitle>
+              <br>
+              <strong>Moyuan Zheng</strong>
+              <br>
+              Performance artistica.
+              <br>
+              <em>Florence, Italy</em>, 2023
+              <p></p>
+              </p>
+            </td>
+          </tr>	
+
           <!-- 2022-A1-->
           <tr onmouseout="clock_stop()" onmouseover="clock_start()">
             <td style="padding:10px;width:50%;vertical-align:middle">
