update  index.html

--- a/index.html
+++ b/index.html
@@ -39,9 +39,6 @@
 
               <p style="text-align:center">
                 <a href="mailto:moyuanzheng305@gmail.com">Email</a> &nbsp/&nbsp
-<!--                 <a href="https://scholar.google.com/citations?user=Md9maLYAAAAJ&hl=en">Google Scholar</a> &nbsp/&nbsp -->
-<!--                 <a href="https://github.com/Amazingren">Github</a> &nbsp/&nbsp -->
-<!--                 <a href="https://twitter.com/Hello_RenBin">Twitter</a> -->
               </p>
             </td>
 
@@ -133,6 +130,38 @@
               Performance Artistica e Video: <a href="https://www.youtube.com/watch?v=dmpfmgH7IhI" target="_blank">Youtube</a> (4'27'') 
               <br>
               <em>Florence, Italy</em>, 2024
+              <p></p>
+              </p>
+            </td>
+          </tr>
+
+          <!-- 2023-A2-->
+          <tr onmouseout="draw_stop()" onmouseover="draw_start()">
+            <td style="padding:10px;width:50%;vertical-align:middle">
+              <div class="one">
+                <div class="two" id='draw_image'>
+                <img src='image/draw1.jpg' width="130%" height="90%">
+	        </div>
+                <img src='image/draw2.jpg' width="130%" height="90%">
+              </div>
+              <script type="text/javascript">
+                function draw_start() {
+                  document.getElementById('draw_image').style.opacity = "0";
+                }
+                function draw_stop() {
+                  document.getElementById('draw_image').style.opacity = "1";
+                }
+                draw_stop()
+              </script>
+            </td>
+            <td style="padding:10px;width:80%;vertical-align:middle">
+              <papertitle>LA STORIA DEI CICLI</papertitle>
+              <br>
+              <strong>Moyuan Zheng</strong>
+              <br>
+              Dipinto a tecnica mista e installazioni in spazio pubblico, 200x300 cm, 2023
+              <br>
+              <em>Florence, Italy</em>, 2023
               <p></p>
               </p>
             </td>
